Search block position small fix

--- a/frontend/src/app/search/search-component/search.component.sass
+++ b/frontend/src/app/search/search-component/search.component.sass
@@ -100,4 +100,4 @@ h3
     position: sticky;
     z-index: 1;
     background: white;
-    top: $header-height;
+    top: calc(#{$header-height} - 5px);
